--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
     <img src="img/welcome-to-sedona.png" width="458" height="352" alt="Добро пожаловать в Седону">
  </section>
 
+   <svg width="1200" height="57" viewBox="0 0 1200 57" fill="none" xmlns="http://www.w3.org/2000/svg">
+   <path d="M0 57V0L250 24V0L600 57L950 0V24L1200 0V57H0Z" fill="red"/>
+   </svg>
  <section class="reasons-promo">
+
       <h2>Седона — небольшой городок в Аризоне, </br>заслуживающий большего! </h2>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
  </section>
@@ -101,7 +105,7 @@
       <li class="favors-item">
         <h3>Небольшая</br>площадь</h3>
         <span>— №3 —</span>
-        <p>все достопримечательности</br>находятся очень близко</p>
+        <p>Все достопримечательности</br>находятся очень близко</p>
       </li>
 
       <li class="favors-item">
@@ -113,7 +117,7 @@
       <li class="favors-item">
         <h3>Мало</br>туристов</h3>
         <span>— №5 —</span>
-        <p>Большинство едет в Гранд Каньон</br>и толпится там</p>
+        <p>Большинство едет в Гранд Каньон</br> и толпится там</p>
       </li>
     </ul>
  </section>
