--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
  <section class="interested">
     <h2>Заинтересовались?</h2>
     <p>  Укажите предполагаемые даты поездки,</br> и мы покажем вам лучшие предложения гостиниц в седоне  </p>
-    <button class="search-button" type="submit">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+    <button class="search-button" type="submit"> <span>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</span> </button>
  </section>
 
  <section class="map" id= "map">
