--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
     <section class="filter">
       <h2 class="visually-hidden">Фильтр поиска гостиниц</h2>
       <form class="filter-menu" method="get" action="https://echo.htmlacademy.ru">
-        <fieldset>
+        <fieldset class="infrastructure">
           <legend class="form-legend">Инфраструктура:</legend>
           <ul class="filter-list">
             <li class="check">
@@ -57,7 +57,7 @@
           </ul>
         </fieldset>
 
-        <fieldset>
+        <fieldset class="infrastructure">
           <legend class="form-legend">Тип жилья:</legend>
           <ul class="filter-list">
            <li class="check">
