--- a/catalog.html
+++ b/catalog.html
@@ -45,38 +45,38 @@
           <legend class="form-legend">Инфраструктура:</legend>
           <ul class="filter-list">
             <li class="check">
-              <input class ="visually-hidden form-input-checkbox form-input" type="checkbox" name="infrastructure" checked value="pool" id="filter-pool" checked>
-            <label class="form-label" for="pool">Бассейн</label>
+              <input class ="visually-hidden form-input-checkbox form-checker" type="checkbox" name="infrastructure" checked="" value="pool" id="filter-pool" checked>
+            <label class="form-label" for="filter-pool">Бассейн</label>
             <li class="check">
-              <input class ="visually-hidden form-input-checkbox form-input" type="checkbox" name="infrastructure" value="parking" id="filter-parking">
-              <label class="form-label" for="parking">Парковка</label>
+              <input class ="visually-hidden form-input-checkbox form-checker" type="checkbox" name="infrastructure" value="parking" id="filter-parking">
+              <label class="form-label" for="filter-parking">Парковка</label>
             <li class="check">
-              <input class ="visually-hidden form-input-checkbox form-input" type="checkbox" name="infrastructure" value="internet" id="filter-internet">
-              <label class="form-label" for="internet">Wi-Fi</label>
+              <input class ="visually-hidden form-input-checkbox form-checker" type="checkbox" name="infrastructure" value="internet" id="filter-internet">
+              <label class="form-label" for="filter-internet">Wi-Fi</label>
             </li>
           </ul>
         </fieldset>
 
-        <fieldset class="infrastructure">
+        <fieldset class="type-house">
           <legend class="form-legend">Тип жилья:</legend>
           <ul class="filter-list">
            <li class="check">
-             <input class ="visually-hidden form-input" type="checkbox" name="type-of-housing" checked value="hotel" id="filter-hotel" cheked>
-             <label class="form-label" for="hotel">Гостиница</label>
+             <input class ="visually-hidden form-checker" type="checkbox" name="type-of-housing" checked value="hotel" id="filter-hotel" cheked>
+             <label class="form-label" for="filter-hotel">Гостиница</label>
            </li>
            <li class="check">
-             <input class ="visually-hidden form-input" type="checkbox" name="type-of-housing" checked value="motel" id="filter-motel">
-             <label class="form-label" for="motel">Мотель</label>
+             <input class ="visually-hidden form-checker" type="checkbox" name="type-of-housing" checked value="motel" id="filter-motel">
+             <label class="form-label" for="filter-motel">Мотель</label>
            </li>
            <li class="check">
-             <input class ="visually-hidden form-input" type="checkbox" name="type-of-housing" checked value="apartments" id="filter-apartments">
-             <label class="form-label" for="apartments">Апартаменты</label>
+             <input class ="visually-hidden form-checker" type="checkbox" name="type-of-housing" checked value="apartments" id="filter-apartments">
+             <label class="form-label" for="filter-apartments">Апартаменты</label>
           </li>
          </ul>
         </fieldset>
 
         <fieldset class="price">
-          <legend class="form-legend">Стоимость в сутки, <span>₽:</span></legend>
+          <legend class="form-price">Стоимость в сутки, <span>₽:</span></legend>
           <div class="range-filter">
 
              <div class="price-controls">
