правочки по дзшке

--- a/catalog.html
+++ b/catalog.html
@@ -131,17 +131,19 @@
     <!-- <h2 class="view-result"> Список жилья</h2> -->
       <ul class="housing-list">
         <li class="housing-item">
-          <div class="hotel-container">
+          <p>
             <img src="img/photo-amara-resort.jpg"
                  width="135"
                  height="90"
                  alt="Главное фото гостиница Amara Resort & Spa">
+          </p>
+          <div class="hotel-container">
             <h3 class="hotel-title">Amara Resort & Spa</h3>
-            <div class="test">
-              <div class="hotel-parameter">
+            <div class="hotel-specification">
               <p class="hotel-type">Гостиница</p>
               <p class="hotel-price">от 4000 ₽</p>
             </div>
+
 
              <div class="buttons-wrapper">
                <button class="more-button" type="button">ПОДРОБНЕЕ</button>
@@ -149,7 +151,6 @@
                </div>
             </div>
 
-          </div>
           <div class="rating">
             <span class="stars">
               <span class="icon-star"><svg width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -169,19 +170,27 @@
           </div>
         </li>
         <li class="housing-item">
-          <div class="hotel-container">
+          <p>
               <img src="img/photo-desert-quail.jpg"
                    width="135"
                    height="90"
                    alt="Главное фото Мотеля Desert Quail Inn">
+          </p>
+          <div class="hotel-container">
               <h3 class="hotel-title">Desert Quail Inn</h3>
+            <div class="hotel-specification">
               <p class="hotel-type">Мотель</p>
               <p class="hotel-price">от 3000 ₽</p>
+           </div>
+
               <div class="buttons-wrapper">
                 <button class="more-button" type="button"><span>ПОДРОБНЕЕ</span></button>
                 <button class="reserve-button" type="button">ЗАБРОНИРОВАТЬ</button>
              </div>
-         </div>
+           </div>
+
+
+
          <div class="rating">
             <span class="stars">
               <span class="icon-star"><svg width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -198,19 +207,27 @@
         </div>
        </li>
        <li class="housing-item">
-          <div class="hotel-container">
+            <p>
                 <img src="img/photo-villas-diablo.jpg"
                      width="135"
                      height="90"
                      alt="Апартаменты Villas at Poco Diablo">
+            </p>
+          <div class="hotel-container">
                 <h3 class="hotel-title">Villas at Poco Diablo</h3>
+              <div class="hotel-specification">
                 <p class="hotel-type">Апартаменты</p>
                 <p class="hotel-price">от 2000 ₽</p>
+             </div>
+
                 <div class="buttons-wrapper">
                   <button class="more-button" type="button">ПОДРОБНЕЕ</button>
                   <button class="reserve-button" type="button">ЗАБРОНИРОВАТЬ</button>
                 </div>
           </div>
+
+        
+
           <div class="rating">
              <span class="stars">
                 <span class="icon-star"><svg width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
