ДЗ 7.18. Декоративные элементы на внутренней странице7.18. Декоративные элементы на внутренней странице

--- a/catalog.html
+++ b/catalog.html
@@ -121,7 +121,7 @@
       </svg>
 </span>
       <span class="icon-down"><svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M5.5 0L0 10H11L5.5 0Z" fill="#CACACA"/>
+      <path d="M5.5 0L0 10H11L5.5 0Z" fill="#81B3D2"/>
       </svg>
 </span>
     </div>
@@ -139,16 +139,21 @@
           </p>
           <div class="hotel-container">
             <h3 class="hotel-title">Amara Resort & Spa</h3>
+
             <div class="hotel-specification">
+
+            <div class="hotel-type">
               <p class="hotel-type">Гостиница</p>
-              <p class="hotel-price">от 4000 ₽</p>
+              <button class="more-button" type="button">ПОДРОБНЕЕ</button>
             </div>
 
 
              <div class="buttons-wrapper">
-               <button class="more-button" type="button">ПОДРОБНЕЕ</button>
+               <p class="hotel-price">от 4000 ₽</p>
                <button class="reserve-button" type="button">ЗАБРОНИРОВАТЬ</button>
                </div>
+
+             </div>
             </div>
 
           <div class="rating">
@@ -169,6 +174,7 @@
             <p class="rating-text">Рейтинг:8,5</p>
           </div>
         </li>
+
         <li class="housing-item">
           <p>
               <img src="img/photo-desert-quail.jpg"
@@ -178,18 +184,21 @@
           </p>
           <div class="hotel-container">
               <h3 class="hotel-title">Desert Quail Inn</h3>
+
             <div class="hotel-specification">
+
+           <div class="hotel-type">
               <p class="hotel-type">Мотель</p>
-              <p class="hotel-price">от 3000 ₽</p>
+              <button class="more-button" type="button"><span>ПОДРОБНЕЕ</span></button>
            </div>
 
               <div class="buttons-wrapper">
-                <button class="more-button" type="button"><span>ПОДРОБНЕЕ</span></button>
+                <p class="hotel-price">от 3000 ₽</p>
                 <button class="reserve-button" type="button">ЗАБРОНИРОВАТЬ</button>
              </div>
+
            </div>
-
-
+           </div>
 
          <div class="rating">
             <span class="stars">
@@ -206,6 +215,7 @@
               <p class="rating-text">Рейтинг:8,9</p>
         </div>
        </li>
+
        <li class="housing-item">
             <p>
                 <img src="img/photo-villas-diablo.jpg"
@@ -213,20 +223,25 @@
                      height="90"
                      alt="Апартаменты Villas at Poco Diablo">
             </p>
+
+
           <div class="hotel-container">
                 <h3 class="hotel-title">Villas at Poco Diablo</h3>
-              <div class="hotel-specification">
+
+            <div class="hotel-specification">
+
+              <div class="hotel-type">
                 <p class="hotel-type">Апартаменты</p>
-                <p class="hotel-price">от 2000 ₽</p>
-             </div>
+                <button class="more-button" type="button">ПОДРОБНЕЕ</button>
+              </div>
 
                 <div class="buttons-wrapper">
-                  <button class="more-button" type="button">ПОДРОБНЕЕ</button>
+                  <p class="hotel-price">от 2000 ₽</p>
                   <button class="reserve-button" type="button">ЗАБРОНИРОВАТЬ</button>
                 </div>
+            </div>
           </div>
 
-        
 
           <div class="rating">
              <span class="stars">
